--- a/model/lstm.yml
+++ b/model/lstm.yml
@@ -3,16 +3,16 @@
   \ !!python/tuple\n      - null\n      - 100\n      dtype: float32\n      embeddings_constraint:\
   \ null\n      embeddings_initializer:\n        class_name: RandomUniform\n     \
   \   config:\n          maxval: 0.05\n          minval: -0.05\n          seed: null\n\
-  \      embeddings_regularizer: null\n      input_dim: 8308\n      input_length:\
+  \      embeddings_regularizer: null\n      input_dim: 10624\n      input_length:\
   \ 100\n      mask_zero: true\n      name: embedding_1\n      output_dim: 100\n \
-  \     trainable: true\n  - class_name: LSTM\n    config:\n      activation: sigmoid\n\
+  \     trainable: true\n  - class_name: LSTM\n    config:\n      activation: tanh\n\
   \      activity_regularizer: null\n      bias_constraint: null\n      bias_initializer:\n\
   \        class_name: Zeros\n        config: {}\n      bias_regularizer: null\n \
   \     dropout: 0.0\n      dtype: float32\n      go_backwards: false\n      implementation:\
   \ 2\n      kernel_constraint: null\n      kernel_initializer:\n        class_name:\
   \ VarianceScaling\n        config:\n          distribution: uniform\n          mode:\
   \ fan_avg\n          scale: 1.0\n          seed: null\n      kernel_regularizer:\
-  \ null\n      name: lstm_1\n      recurrent_activation: hard_sigmoid\n      recurrent_constraint:\
+  \ null\n      name: lstm_1\n      recurrent_activation: sigmoid\n      recurrent_constraint:\
   \ null\n      recurrent_dropout: 0.0\n      recurrent_initializer:\n        class_name:\
   \ Orthogonal\n        config:\n          gain: 1.0\n          seed: null\n     \
   \ recurrent_regularizer: null\n      return_sequences: false\n      return_state:\
@@ -20,12 +20,12 @@
   \      units: 50\n      unroll: false\n      use_bias: true\n  - class_name: Dropout\n\
   \    config:\n      dtype: float32\n      name: dropout_1\n      noise_shape: null\n\
   \      rate: 0.5\n      seed: null\n      trainable: true\n  - class_name: Dense\n\
-  \    config:\n      activation: linear\n      activity_regularizer: null\n     \
-  \ bias_constraint: null\n      bias_initializer:\n        class_name: Zeros\n  \
-  \      config: {}\n      bias_regularizer: null\n      dtype: float32\n      kernel_constraint:\
+  \    config:\n      activation: softmax\n      activity_regularizer: null\n    \
+  \  bias_constraint: null\n      bias_initializer:\n        class_name: Zeros\n \
+  \       config: {}\n      bias_regularizer: null\n      dtype: float32\n      kernel_constraint:\
   \ null\n      kernel_initializer:\n        class_name: VarianceScaling\n       \
   \ config:\n          distribution: uniform\n          mode: fan_avg\n          scale:\
   \ 1.0\n          seed: null\n      kernel_regularizer: null\n      name: dense_1\n\
-  \      trainable: true\n      units: 1\n      use_bias: true\n  - class_name: Activation\n\
-  \    config:\n      activation: sigmoid\n      dtype: float32\n      name: activation_1\n\
+  \      trainable: true\n      units: 3\n      use_bias: true\n  - class_name: Activation\n\
+  \    config:\n      activation: softmax\n      dtype: float32\n      name: activation_1\n\
   \      trainable: true\n  name: sequential_1\nkeras_version: 2.3.1\n"
